--- a/views/act_new.erb
+++ b/views/act_new.erb
@@ -1,5 +1,10 @@
-#ここで活動と個人の投稿ができる。(フォーマットがある)
-#それをindexとhomeで表示させる。
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+<meta charset="UTF-8">
+<title>個人画面</title>
+</head>
+
 <section>
 <h1>クエスト</h1>
 <div>
@@ -14,7 +19,7 @@
     難易度<br>
     <div class="wrap">
     <select name="star">
-    <option value="">0</option>
+    <option value="rate rate0">0</option>
     <option value="rate rate1">★</option>
     <option value="rate rate1-5">★0.5</option>
     <option value="rate rate2">★★</option>
@@ -23,7 +28,7 @@
     <option value="rate rate3-5">★★★0.5</option>
     <option value="rate rate4">★★★★</option>
     <option value="rate rate4-5">★★★★0.5</option>
-    <option value="rate rate4-5">★★★★★</option>
+    <option value="rate rate5">★★★★★</option>
     </select>
     </div>
   </div>
