--- a/public/assets/css/star.css
+++ b/public/assets/css/star.css
@@ -10,7 +10,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  content: '★★★★★★';
+  content: '★★★★★';
   display: inline-block;
   height: 16px;
   line-height: 16px;
